# algo-trader

./: .gitignore  README.md  main.py  pyproject.toml
algo_data/: data.py
algo_event/: event.py
algo_model/: strategy.py
api_js/: index.js  package-lock.json  package.json  people.csv
data/: utils.py
market/: drivers.py  industries.pkl  info.csv  portfolio.py  traders.py
model/: statistics.py  strategy.py
model/tables/: ADF_CRIT_VALUES.csv
pipelines/: PairsTrader.py  pairs_trading_pipeline.py
tests/: test_classes.py
tests/model/: test_statistics.py
